--- a/index.html
+++ b/index.html
@@ -31,11 +31,18 @@
                <li>     <i class="fas fa-address-book"></i>                <a href="#">Contact Me</a></li>
            </ul>
        </div>
+       <div id="type-text2">
+    </div>
     </aside>
     <div class="right" >
         <div class="icon">
             <i class="fas fa-bars"></i> 
         </div>
+
+
+        <div id="type-text">
+        </div>
+       
     </div>
  </div>
 
