--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
  <div class="landing">
     <aside class="bar">
-       <div class="logo">
-           <img src="./images/ahmed.jpg" alt="ahmed-elzayady">
-           <p class="color">Ahmed Magdy Elzayady</p>
+       <div class="logo"">
+           <img src="./images/logo.png" alt="ahmed-elzayady">
+           <!-- <p class="color">Ahmed Magdy Elzayady</p> -->
        </div>
     
        <div class="links-of-page">
@@ -41,6 +41,10 @@
 
 
         <div id="type-text">
+        </div>
+
+        <div class="img">
+            <img src="./images/ahmed-removebg-preview (1).png" alt="">
         </div>
        
     </div>
