--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- external stylesheet -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- lolo -->
-    <link rel="shortcut icon" href="./images/dd.png">
+    <link rel="shortcut icon" href="./images/logo.png">
     <title>Ahmed Magdy Elzayady</title>
 </head>
 <body>
@@ -39,12 +39,14 @@
             <i class="fas fa-bars"></i> 
         </div>
 
-
-        <div id="type-text">
-        </div>
-
-        <div class="img">
-            <img src="./images/ahmed-removebg-preview (1).png" alt="">
+ 
+        <div class="ff">
+             <div id="type-text">
+            </div>
+            
+            <div class="img">
+                <img src="./images/ahmed-removebg-preview (1).png" alt="">
+            </div>
         </div>
        
     </div>
