update about section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +15,7 @@
 	<link rel="shortcut icon" href="./images/logo-modified.png">
 	<title>Ahmed Magdy Elzayady</title>
 </head>
+
 <body>
 	<div class="landing">
 		<aside class="bar">
@@ -70,9 +72,9 @@
 						<p>Phone: +2010655989737</p>
 						<p>freelancing: Available</p>
 					</div>
-				
+
 				</div>
-				
+
 				<div class="skills">
 					<div class="one">
 						<div class="text">
@@ -111,10 +113,46 @@
 					</div>
 				</div>
 			</div>
-			<a href="https://drive.google.com/file/d/1MGdO6MO5DqvgzAegCR1syw0Zmoc0mPbZ/view?usp=share_link" id="cv" target="_blank"> Download CV</a>
+			<a href="https://drive.google.com/file/d/1MGdO6MO5DqvgzAegCR1syw0Zmoc0mPbZ/view?usp=share_link" id="cv"
+				target="_blank"> Download CV</a>
+
+			<h3>Education</h3>
+			<div class="color">
+				<div class="move"></div>
+			</div>
+<div class="education">
+	<div class="line"></div>
+				<div class="amit">
+					<b><span>AMIT</span> Learning</b>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero a, dolorum cum, beatae doloremque veritatis
+						consequatur repellendus sint blanditiis dolor earum deserunt cupiditate iste quam esse quibusdam commodi
+						perferendis in?</p>
+				</div>
+				<div class="met">
+					<b><span>MET</span> Academy</b>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur error impedit, sed atque dignissimos
+						fugit asperiores culpa voluptate repellendus temporibus ducimus hic cupiditate, quidem modi eaque doloribus
+						delectus minima odit!</p>
+				</div>
+				<div class="smart">
+					<b><span>Smart</span> Technology</b>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum laudantium magni tempora, perferendis corrupti
+						est hic dolorem adipisci maxime unde aperiam odit minus rerum voluptatibus illum tenetur fuga? Tenetur, harum.
+					</p>
+	
+				</div>
+				<div class="creative">
+					<b><span>Creativa </span> Hub Mansoura</b>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perferendis fuga est distinctio aut at.
+						Totam eum magnam, saepe culpa ex fuga consectetur voluptatem cumque laboriosam aliquam atque consequuntur
+						nisi?</p>
+				</div>
+</div>
+
 		</div>
 	</div>
 	<!-- end about section -->
 	<script src="./js/main.js"></script>
 </body>
+
 </html>
