--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<ul>
 					<li> <i class="fas fa-home"></i> <a href="#">Home</a></li>
 					<li> <i class="fas fa-user"></i> <a href="#about">About</a></li>
-					<li> <i class="fad fa-address-card"></i> <a href="#">Compitions</a></li>
+					<li> <i class="fad fa-address-card"></i> <a href="#comp">Compitions</a></li>
 					<li> <i class="fa-solid fa-image"></i> <a href="#">Cirtificates</a></li>
 					<li> <i class="fas fa-address-book"></i> <a href="#">Contact Me</a></li>
 				</ul>
@@ -120,8 +120,8 @@
 			<div class="color">
 				<div class="move"></div>
 			</div>
-<div class="education">
-	<div class="line"></div>
+			<div class="education">
+				<div class="line"></div>
 				<div class="amit">
 					<b><span>AMIT</span> Learning</b>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero a, dolorum cum, beatae doloremque veritatis
@@ -136,22 +136,94 @@
 				</div>
 				<div class="smart">
 					<b><span>Smart</span> Technology</b>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum laudantium magni tempora, perferendis corrupti
-						est hic dolorem adipisci maxime unde aperiam odit minus rerum voluptatibus illum tenetur fuga? Tenetur, harum.
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum laudantium magni tempora, perferendis
+						corrupti
+						est hic dolorem adipisci maxime unde aperiam odit minus rerum voluptatibus illum tenetur fuga? Tenetur,
+						harum.
 					</p>
-	
+
 				</div>
 				<div class="creative">
 					<b><span>Creativa </span> Hub Mansoura</b>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perferendis fuga est distinctio aut at.
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perferendis fuga est distinctio aut
+						at.
 						Totam eum magnam, saepe culpa ex fuga consectetur voluptatem cumque laboriosam aliquam atque consequuntur
 						nisi?</p>
 				</div>
-</div>
+			</div>
 
 		</div>
 	</div>
 	<!-- end about section -->
+
+	<!-- start compitations -->
+	<div class="comp" id="comp">
+		<div class="container">
+			<h1>competitions</h1>
+			<div class="color">
+				<div class="move"></div>
+			</div>
+			<div class="images">
+				<div class="poster">
+					<div class="for-img">
+						<img src="./images/PSED.jpg" alt="">
+						<div class="before">
+							<a href="https://www.facebook.com/AhmedMagdi25/posts/pfbid0XgEXwBHjk4EmTTtS93WVKzwnsRaQbgX8T6sqfftcH7MWtp51Gh7BiofihGCMhSiwl" target="_blank">SEE The Events of comp.</a>
+						</div>
+					</div>
+					<p> Port-said Engineering Day </p>
+				</div>
+				<div class="poster">
+					<div class="for-img">
+						<img src="./images/ECPC.jpg" class="ECPC" alt="">
+						<div class="before">
+							<a href="https://www.facebook.com/AhmedMagdi25/posts/pfbid034av9CkN5W1Piz93ZW4QrYFkwgmv4STK5aHJmYge3bi4sd5Gw5wdD1CfSL3kb1kzhl" target="_blank">SEE The Events of comp.</a>
+						</div>
+					</div>
+					<p>ECPC Egyptian Collegiate Programming Contest</p>
+				</div>
+				<div class="poster">
+					<div class="for-img">
+						<img src="./images/ITC.jpg" alt="">
+						<div class="before">
+							<a href="https://www.facebook.com/AhmedMagdi25/posts/pfbid02rPfvj34VYC9DMfLi6T74vKaisZcYdDnbpMcvA6eu2ub2FkZPRM4ZYyq9K2zX2fUXl" target="_blank">SEE The Events of comp.</a>
+						</div>
+					</div>
+					<p>International telecommunication Conference</p>
+				</div>
+				<div class="poster">
+					<div class="for-img">
+						<img src="./images/NASA.jpg" class="nasa" alt="">
+						<div class="before">
+							<a href="https://www.facebook.com/AhmedMagdi25/posts/pfbid0H7GwB8uSx6Aeo1auweCPkdDPyxmSzCK2QJATmkag6XMND96ixs8bMvdwyyoD5K6Vl" target="_blank">SEE The Events of comp.</a>
+						</div>
+					</div>
+					<p> NASA Space Apps Cairo</p>
+				</div>
+				<div class="poster">
+					<div class="for-img">
+						<img src="./images/opet.jpg" class="opet" alt="">
+						<div class="before">
+							<a
+								href="https://www.facebook.com/AhmedMagdi25/posts/pfbid0ukPsArHv6PxzZz9Dx2uHZ8r5e4h4gAjkSyExvB3TrJUJJPptMWk1g9ukEoCdDenzl" target="_blank">SEE
+								The Events of comp.</a>
+						</div>
+					</div>
+					<p>IEEE Region 8 OPET in HU</p>
+				</div>
+				<div class="poster">
+					<div class="for-img">
+						<img src="./images/mans.jpg" class="opet" alt="">
+						<div class="before">
+							<a href="https://www.facebook.com/AhmedMagdi25/posts/pfbid0mG5L3zJoAWQraMwepvnUkGYghhzp1feNez37qdR6dLvKVuZ1zGUqEXaZev9Ku7Hml" target="_blank">SEE The Events of comp.</a>
+						</div>
+					</div>
+					<p style="line-height: 1.8;">Mansoura University Mansoura Exhibition for Scientific Projects</p>
+				</div>
+
+			</div>
+		</div>
+	</div>
 	<script src="./js/main.js"></script>
 </body>
 
