--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				<ul>
 					<li> <i class="fas fa-home"></i> <a href="#">Home</a></li>
 					<li> <i class="fas fa-user"></i> <a href="#about">About</a></li>
-					<li> <i class="fad fa-address-card"></i> <a href="#comp">Compitions</a></li>
-					<li> <i class="fa-solid fa-image"></i> <a href="#">Cirtificates</a></li>
-					<li> <i class="fas fa-address-book"></i> <a href="#">Contact Me</a></li>
+					<li> <i class="fas fa-users"></i><a href="#comp">Compitions</a></li>
+					<li> <i class="fas fa-portrait"></i> <a href="#cer">Cirtificates</a></li>
+					<li> <i class="fas fa-phone-alt"></i> <a href="#cont">Contact Me</a></li>
 				</ul>
 			</div>
 			<div id="type-text2">
@@ -134,7 +134,7 @@
 						fugit asperiores culpa voluptate repellendus temporibus ducimus hic cupiditate, quidem modi eaque doloribus
 						delectus minima odit!</p>
 				</div>
-				<div class="smart">
+				<div class="smart" style="border-bottom: 1px solid #00000021;">
 					<b><span>Smart</span> Technology</b>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum laudantium magni tempora, perferendis
 						corrupti
@@ -145,6 +145,13 @@
 				</div>
 				<div class="creative">
 					<b><span>Creativa </span> Hub Mansoura</b>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perferendis fuga est distinctio aut
+						at.
+						Totam eum magnam, saepe culpa ex fuga consectetur voluptatem cumque laboriosam aliquam atque consequuntur
+						nisi?</p>
+				</div>
+				<div class="itrax">
+					<b><span>Itrax </span> academy</b>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perferendis fuga est distinctio aut
 						at.
 						Totam eum magnam, saepe culpa ex fuga consectetur voluptatem cumque laboriosam aliquam atque consequuntur
@@ -168,7 +175,8 @@
 					<div class="for-img">
 						<img src="./images/PSED.jpg" alt="">
 						<div class="before">
-							<a href="https://www.facebook.com/AhmedMagdi25/posts/pfbid0XgEXwBHjk4EmTTtS93WVKzwnsRaQbgX8T6sqfftcH7MWtp51Gh7BiofihGCMhSiwl" target="_blank">SEE The Events of comp.</a>
+							<a href="https://www.facebook.com/AhmedMagdi25/posts/pfbid0XgEXwBHjk4EmTTtS93WVKzwnsRaQbgX8T6sqfftcH7MWtp51Gh7BiofihGCMhSiwl"
+								target="_blank">SEE The Events of comp.</a>
 						</div>
 					</div>
 					<p> Port-said Engineering Day </p>
@@ -177,7 +185,8 @@
 					<div class="for-img">
 						<img src="./images/ECPC.jpg" class="ECPC" alt="">
 						<div class="before">
-							<a href="https://www.facebook.com/AhmedMagdi25/posts/pfbid034av9CkN5W1Piz93ZW4QrYFkwgmv4STK5aHJmYge3bi4sd5Gw5wdD1CfSL3kb1kzhl" target="_blank">SEE The Events of comp.</a>
+							<a href="https://www.facebook.com/AhmedMagdi25/posts/pfbid034av9CkN5W1Piz93ZW4QrYFkwgmv4STK5aHJmYge3bi4sd5Gw5wdD1CfSL3kb1kzhl"
+								target="_blank">SEE The Events of comp.</a>
 						</div>
 					</div>
 					<p>ECPC Egyptian Collegiate Programming Contest</p>
@@ -186,7 +195,8 @@
 					<div class="for-img">
 						<img src="./images/ITC.jpg" alt="">
 						<div class="before">
-							<a href="https://www.facebook.com/AhmedMagdi25/posts/pfbid02rPfvj34VYC9DMfLi6T74vKaisZcYdDnbpMcvA6eu2ub2FkZPRM4ZYyq9K2zX2fUXl" target="_blank">SEE The Events of comp.</a>
+							<a href="https://www.facebook.com/AhmedMagdi25/posts/pfbid02rPfvj34VYC9DMfLi6T74vKaisZcYdDnbpMcvA6eu2ub2FkZPRM4ZYyq9K2zX2fUXl"
+								target="_blank">SEE The Events of comp.</a>
 						</div>
 					</div>
 					<p>International telecommunication Conference</p>
@@ -195,7 +205,8 @@
 					<div class="for-img">
 						<img src="./images/NASA.jpg" class="nasa" alt="">
 						<div class="before">
-							<a href="https://www.facebook.com/AhmedMagdi25/posts/pfbid0H7GwB8uSx6Aeo1auweCPkdDPyxmSzCK2QJATmkag6XMND96ixs8bMvdwyyoD5K6Vl" target="_blank">SEE The Events of comp.</a>
+							<a href="https://www.facebook.com/AhmedMagdi25/posts/pfbid0H7GwB8uSx6Aeo1auweCPkdDPyxmSzCK2QJATmkag6XMND96ixs8bMvdwyyoD5K6Vl"
+								target="_blank">SEE The Events of comp.</a>
 						</div>
 					</div>
 					<p> NASA Space Apps Cairo</p>
@@ -204,8 +215,8 @@
 					<div class="for-img">
 						<img src="./images/opet.jpg" class="opet" alt="">
 						<div class="before">
-							<a
-								href="https://www.facebook.com/AhmedMagdi25/posts/pfbid0ukPsArHv6PxzZz9Dx2uHZ8r5e4h4gAjkSyExvB3TrJUJJPptMWk1g9ukEoCdDenzl" target="_blank">SEE
+							<a href="https://www.facebook.com/AhmedMagdi25/posts/pfbid0ukPsArHv6PxzZz9Dx2uHZ8r5e4h4gAjkSyExvB3TrJUJJPptMWk1g9ukEoCdDenzl"
+								target="_blank">SEE
 								The Events of comp.</a>
 						</div>
 					</div>
@@ -215,15 +226,99 @@
 					<div class="for-img">
 						<img src="./images/mans.jpg" class="opet" alt="">
 						<div class="before">
-							<a href="https://www.facebook.com/AhmedMagdi25/posts/pfbid0mG5L3zJoAWQraMwepvnUkGYghhzp1feNez37qdR6dLvKVuZ1zGUqEXaZev9Ku7Hml" target="_blank">SEE The Events of comp.</a>
+							<a href="https://www.facebook.com/AhmedMagdi25/posts/pfbid0mG5L3zJoAWQraMwepvnUkGYghhzp1feNez37qdR6dLvKVuZ1zGUqEXaZev9Ku7Hml"
+								target="_blank">SEE The Events of comp.</a>
 						</div>
 					</div>
 					<p style="line-height: 1.8;">Mansoura University Mansoura Exhibition for Scientific Projects</p>
 				</div>
-
 			</div>
 		</div>
 	</div>
+	</div>
+	</div>
+	<div class="gallery">
+		<div class="container">
+			<div class="special" style="margin-right: 155px;">
+				<h1>Gallery</h1>
+				<div class="color">
+					<div class="move"></div>
+				</div>
+			</div>
+			<div class="gall"></div>
+		</div>
+	</div>
+	<!-- start cirt -->
+	<div class="certifiate" id="cer">
+		<div class="container" style="margin-right: 155px;">
+			<h1>Certificates</h1>
+			<div class="color">
+				<div class="move"></div>
+			</div>
+			<div class="all">
+				<div class="imgg">
+					<img src="./images/CC.jpg" alt="">
+				</div>
+				<div class="imgg">
+					<img src="./images/EC.jpg" alt="">
+				</div>
+				<div class="imgg">
+					<img src="./images/IC.jpg" alt="">
+				</div>
+				<div class="imgg">
+					<img src="./images/MS.jpg" alt="">
+				</div>
+				<div class="imgg">
+					<img src="./images/PS.jpg" alt="">
+				</div>
+				<div class="imgg">
+					<img src="./images/OC.jpg" alt="">
+				</div>
+				<div class="imgg">
+					<img src="./images/NS2.jpg" alt="">
+				</div>
+				<div class="imgg">
+					<img src="./images/NS.jpg" alt="">
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end cirt -->
+	<!-- start contact -->
+	<div class="contact" id="cont" >
+		<div class="container">
+			<h1>Contact <span>Me</span></h1>
+			<div class="color">
+				<div class="move"></div>
+			</div>
+			<form name="form1" method="POST">
+				<input type="text" name="urname" required placeholder="your name">
+				<input type="email" name="uremail" required placeholder="your email">
+				<textarea name="message" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+				<input type="submit" value="Send">
+			</form>
+		</div>
+	</div>
+	<div class="links">
+		<div class="container" style="margin-right: 155px;">
+			<h1>Keep in <span>touch</span></h1>
+			<div class="color">
+				<div class="move"></div>
+			</div>
+			<div class="links-contact">
+				
+				<a href="https://www.facebook.com/AhmedMagdi25" target="_blank"><i class="fab fa-facebook-square"></i></a>
+			<a href="https://twitter.com/AhmedElzayady21?t=WfzS_z7b0ECKMS0Nc1lfOg&s=09" target="_blank">	<i class="fab fa-twitter-square"></i></a>
+				<a href="https://www.linkedin.com/in/ahmed-elzayady-602272232/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+				<a href="https://github.com/Ahmed-Elzayady" target="_blank"><i class="fab fa-github"></i></a>
+				<a href="#"><i class="fab fa-whatsapp"></i></a>
+				<a href="#"><i class="fab fa-youtube"></i></a>
+			</div>
+		</div>
+	</div>
+	<footer>Designed by Ahmed Magdy Elzayady &copy; 2033 . All Right Reserved</footer>
+	<!-- end contact -->
+
 	<script src="./js/main.js"></script>
 </body>
 
